--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<object data=”lingareddy-resume.pdf" type=”application/pdf” width=”100%” height=”100%”>
+<embed src=”lingareddy-resume.pdf" type=”application/pdf” width=”100%” height=”100%”>
